test/0/parsing.out

arg1: '10 0b10 0q10 0o10 0d10 0x10'
arg1:1:1-3: num: 10
10 0b10 0q10 0o10 0d10 0x10
~~
arg1:1:3-4: space
10 0b10 0q10 0o10 0d10 0x10
  ~
arg1:1:4-8: bin: 2
10 0b10 0q10 0o10 0d10 0x10
   ~~~~
arg1:1:8-9: space
10 0b10 0q10 0o10 0d10 0x10
       ~
arg1:1:9-13: quat: 4
10 0b10 0q10 0o10 0d10 0x10
        ~~~~
arg1:1:13-14: space
10 0b10 0q10 0o10 0d10 0x10
            ~
arg1:1:14-18: oct: 8
10 0b10 0q10 0o10 0d10 0x10
             ~~~~
arg1:1:18-19: space
10 0b10 0q10 0o10 0d10 0x10
                 ~
arg1:1:19-23: dec: 10
10 0b10 0q10 0o10 0d10 0x10
                  ~~~~
arg1:1:23-24: space
10 0b10 0q10 0o10 0d10 0x10
                      ~
arg1:1:24-28: hex: 16
10 0b10 0q10 0o10 0d10 0x10
                       ~~~~

arg2: '0x__ffff_ffff_ffff_ffff'
arg2:1:1-24: hex: 18446744073709551615
0x__ffff_ffff_ffff_ffff
~~~~~~~~~~~~~~~~~~~~~~~

arg3: '0x1_0000_0000_0000_0000'
arg3:1:1-24: error: overflow(hex:0-23)
0x1_0000_0000_0000_0000
~~~~~~~~~~~~~~~~~~~~~~~
